--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Personal Portfolio Website 2022</title>
+	<title>Ranajee Space</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="stylesheet"
@@ -211,7 +211,7 @@
 
 		<div class="cta-box">
 			<div class="wrap one">
-				<h3>1200+</h3>
+				<h3>900+</h3>
 				<p>Finished Projects</p>
 			</div>
 
@@ -221,7 +221,7 @@
 			</div>
 
 			<div class="wrap three">
-				<h3>15k</h3>
+				<h3>1.5k</h3>
 				<p>Global Customers</p>
 			</div>
 
