--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<div class="about-text">
 			<h3>I'm a Designer</h3>
 			<h2>I Can Design Anything You Want</h2>
-			<p>Hello there! I'm a Graphic designer, and I'm very passionate and dedicated to my work. With 1+ years experience as a professional graphic developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
+			<p>Hello there! I'm a graphic designer, and I'm very passionate and dedicated to my work. With 1+ years experience as a professional graphic designer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
 			<a href="#" class="btn">Hire Me</a>
 		</div>
 	</section>
